force-app/main/default/objects/Trial_Feedback__c/Trial_Feedback__c.object-meta.xml
<CustomObject>
    <label>Trial Feedback</label>
    <nameField>
        <displayFormat>TF-{0}</displayFormat>
        <label>TrialFeedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trial Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>