force-app/main/default/objects/Trial_Feedback__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>