force-app/main/default/objects/Trial_Feedback__c/fields/OrgID__c.field-meta.xml
<CustomField>
    <fullName>OrgID__c</fullName>
    <label>OrgID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>