force-app/main/default/objects/Trial_Feedback__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <label>UserId</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>