force-app/main/default/objects/Trial_Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>OrgID__c</columns>
    <columns>UserId__c</columns>
    <columns>Rating__c</columns>
    <columns>Comments__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>